--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "angular2-chartjs": "^0.5.1",
     "bootstrap": "^5.3.2",
+    "chart": "^0.1.2",
+    "chart.js": "^4.4.1",
+    "chartjs": "^0.3.24",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
